log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: log-data
        emptyDir: {}
      containers:
        - name: writer
          image: aapolaivm/log-output:v2.6
          command: [ "python", "/app/writer.py" ]
          volumeMounts:
          - mountPath: /usr/src/app/files
            name: log-data
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: reader
          image: aapolaivm/log-output:v2.6  
          command: [ "python", "/app/reader.py" ]
          volumeMounts:
          - mountPath: /usr/src/app/files
            name: log-data
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
