log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  selector:
    app: log-output
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
